kubernetes/apps/nexotv/nexotv-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nexotv
  name: nexotv
  namespace: stremio
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nexotv
  template:
    metadata:
      labels:
        app: nexotv
    spec:
      volumes:
      - name: nexotv-data
        persistentVolumeClaim:
          claimName: nexotv-data
      - name: nexotv-patches
        configMap:
          name: nexotv-patches
      containers:
      - image: savibrabo/nexotv:2.1.0
        name: nexotv
        volumeMounts:
        - name: nexotv-data
          mountPath: /app/data
        - name: nexotv-patches
          mountPath: /app/packages/backend/dist/src/config/env.js
          subPath: env.js
        - name: nexotv-patches
          mountPath: /app/packages/backend/dist/src/addon/M3UEPGAddon.js
          subPath: M3UEPGAddon.js
        - name: nexotv-patches
          mountPath: /app/packages/backend/dist/src/addon/builder.js
          subPath: builder.js
        - name: nexotv-patches
          mountPath: /app/packages/backend/dist/src/routes/stremio.js
          subPath: stremio.js
        ports:
        - containerPort: 7000
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: "1"
            memory: 512Mi
