kubernetes/apps/nexotv/nexotv-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nexotv
  name: nexotv
  namespace: stremio
spec:
  ports:
  - name: http
    port: 7000
    protocol: TCP
    targetPort: 7000
  selector:
    app: nexotv
  type: ClusterIP
