kubernetes/apps/nexotv/httproute-nexotv.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nexotv
  namespace: stremio
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: cloudflare-tunnel
    namespace: cloudflare-tunnel-system
    sectionName: https
  hostnames:
  - nexotv.alialjaffer.com
  rules:
  - backendRefs:
    - name: nexotv
      port: 7000
